<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">


    <Button
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_filterApply"
        android:layout_gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:text="@string/filter_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_off"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_prepaid"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:clickable="false">

            <RadioButton
                android:text="@string/prepaided"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_with"
                android:layout_weight="1"
                android:checked="true"
                android:enabled="false" />

            <RadioButton
                android:text="@string/not_prepaided"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_with_out"
                android:layout_weight="1"
                android:enabled="false" />
        </RadioGroup>

        <RadioButton
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_address"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

</LinearLayout>