<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:text="@string/creating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_title"
        style="@style/activity_title" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choise_address_layout">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:text="@string/flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_flat"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:text="@string/office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_office"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/private_build"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_privateBuild"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_address_cancel"
                android:layout_weight="1" />

            <Button
                android:text="@string/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_address_next"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_address_layout"
        android:visibility="visible">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/state_row">

                <TextView
                    android:text="@string/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    style="@style/field_name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_state"
                    android:hint="@string/state" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/city_row">

                <TextView
                    android:text="@string/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    style="@style/field_name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_city"
                    android:hint="@string/city" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/street_row">

                <TextView
                    android:text="@string/street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    style="@style/field_name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_street"
                    android:hint="@string/street" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/building_row" >

                <TextView
                    android:text="@string/build_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    style="@style/field_name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_buildNum"
                    android:hint="@string/build_num" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/floor_row"
                android:visibility="gone">

                <TextView
                    android:text="@string/floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    style="@style/field_name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_floor"
                    android:hint="@string/floor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/number_row"
                android:visibility="gone">

                <TextView
                    android:text="@string/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    style="@style/field_name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_number"
                    android:hint="@string/number" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_address_back"
                android:layout_weight="1" />

            <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_address_add"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>