<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/creating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_title"
                    style="@style/activity_title" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:text="@string/named"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView5"
                            style="@style/field_name" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/et_order_name"
                            android:hint="@string/named" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:text="@string/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            style="@style/field_name" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/et_order_date"
                            android:hint="@string/date" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:text="@string/time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView14"
                            style="@style/field_name" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="time"
                            android:ems="10"
                            android:id="@+id/et_order_time"
                            android:hint="@string/time" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="@string/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            style="@style/field_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/tv_order_address"
                            style="@style/item_field"
                            android:text="@string/address"
                            android:elevation="1dp"
                            android:isScrollContainer="true"
                            android:maxLines="3"
                            android:minLines="3"
                            android:layout_weight="1"
                            android:lines="3" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:text="@string/edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_order_editAddress" />

                        <TextView
                            android:text="@string/field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView19" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/row_order_product_add">

                        <TextView
                            android:text="@string/tovar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView8"
                            style="@style/field_name" />

                        <TextView
                            android:text="@string/tovar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_order_product"
                            style="@style/item_field" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <Button
                            android:text="@string/edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_order_addProduct"/>

                        <Switch
                            android:text="@string/prepaid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sw_paided" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/total_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView13"
                            style="@style/field_name" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_order_totalPrice"
                            style="@style/item_field"
                            android:text="0"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp">

                        <Button
                            android:text="@string/cancel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_order_cancel" />

                        <Button
                            android:text="@string/create"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_order_createOrder" />

                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>